--- a/two-column-feature.module/two-column-feature.module/module.html
+++ b/two-column-feature.module/two-column-feature.module/module.html
@@ -1,6 +1,6 @@
 <!-- module html  -->
 
-<div class="two-col-feature {{ module.choice_field }}">
+<div class="two-col-feature {{ module.choice_field }}  {{ module.color_scheme }}">
 
   
   <div class="col text"> 
